@@ -36,6 +36,8 @@
 	* inst/tinytest/test_string.R: Idem
 	* inst/tinytest/test_subset.R: Idem
 	* inst/tinytest/test_sugar.R: Idem
+	* inst/tinytest/test_sugar_var.R: Idem
+	* inst/tinytest/test_support.R: Idem
 
 2019-11-23  Dirk Eddelbuettel  <edd@debian.org>
 
